--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <script src="rockpaperscissors.js"></script>
+    <script src="rockpaperscissors2.js"></script>
 </body>
 </html>
