--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <p>choose your weapon</p>
     <script src="rockpaperscissors2.js"></script>
+    <button id="rock">rock</button>
+    <button id="paper">paper</button>
+    <button id="scissors">scissors</button>
+    <button id="hey">hey</button>
+    <div result></div>
+    <div winner></div>
 </body>
 </html>
