--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <button id="rock">rock</button>
     <button id="paper">paper</button>
     <button id="scissors">scissors</button>
-    <button id="hey">hey</button>
     <div result></div>
     <div winner></div>
+    <div score></div>
+
 </body>
 </html>
